# discrete_dist_convolution

./: .gitignore  CURRENT_RESULTS.md  DOCUMENTATION.md  LARGE_SCALE_RESULTS.md  Makefile  README.md  RESULTS_5K.md  STATUS.md  USAGE_NEW_GRID.md  alternative_methods.py  conftest.py  discrete_conv_api.py  evaluation.py  examples_trim_log_grid.py  experiments.py  implementation.py  pyproject.toml  run_comparisons.py  selfconv.py  simple_experiments.py  simplified_implementation.py  test_kernels_contracts.py  test_selfconv_core.py  test_steps.py  tests.py  utils.py
comparisons/: __init__.py  analytic_convolution.py  fft_convolution.py  monte_carlo_convolution.py
docs/: CONTRIBUTING.md  DERIVATION.tex  IMPLEMENTATION_GUIDE_NUMBA.md  IMPLEMENTATION_PLAN.md
evaluation/: __init__.py
experiments/: data_utils.py  demo_5k_bins.py  demo_method_comparison.py  demo_moment_comparison.py  demo_spacing_comparison.py  test_self_conv_progressive.py  verify_comparison_methods.py  visualize_self_conv_results.py
implementation/: grids.py  kernels.py  ledger.py  selfconv.py  steps.py  types.py  utils.py
implementations/: kernels.py  steps.py
tests/: conftest.py  test_convolution_bounds.py  test_envelope_properties.py  test_kernels_contracts.py  test_ledger.py  test_pmf_pmf_kernel.py  test_roundtrip_conversions.py  test_selfconv_core.py  test_skeleton.py  test_steps.py  test_utils.py
visualization/: __init__.py  compare_bounds.py  method_comparison_plots.py  utils.py
vizualization/: compare_bounds.py  pmf_demo.py  pmf_explorer.py  pmf_pmf_visualization.py
